--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ body {
 	background: gray;
 }
 
+nav {
+	width: 100%;
+	position: fixed !important;
+}
+
 .dropdown-menu a:hover {
 	background-color: #212529;
+}
+
+li {
+	list-style-type: none;
+}
+
+li a {
+	color: white;
 }
